HV-2145 Require JDK 25 for the build
Signed-off-by: marko-bekhta <marko.prykladna@gmail.com>